kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salary-mlops-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: salary-mlops

  template:
    metadata:
      labels:
        app: salary-mlops

    spec:
      containers:
      - name: salary-mlops
        image: yourusername/salary-mlops

        ports:
        - containerPort: 8000
