kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: salary-mlops-service

spec:
  selector:
    app: salary-mlops

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: LoadBalancer
